# CrafText_new_scenario

./: .gitignore  README.md  pyproject.toml  requirements.txt
craftext/: pyproject.toml
craftext/dataset/configs/: build_line_hard_test_paraphrases.yaml  build_line_medium_test_paraphrases.yaml  build_square_medium_test_paraphrases.yaml  build_star_medium_test_paraphrases.yaml  conditional_achievements_hard_test_paraphrases.yaml  conditional_achievements_medium_test_paraphrases.yaml  conditional_placing_hard_test_paraphrases.yaml  conditional_placing_medium_test_parafrases.yaml  easy_test_parafrases.yaml  explore_water_easy.yaml  hard_test_paraphrases.yaml  localization_placing_hard_test_paraphrases.yaml  localization_placing_medium_test_paraphrases.yaml  medium_test_other_params.yaml  medium_test_paraphrases.yaml  medium_train.yaml  tools_placing_easy.yaml
craftext/dataset/scenarious/: statistics.py
craftext/dataset/scenarious/SMALL/: instructions.py  test.py
craftext/dataset/scenarious/extra_files/: easy_gpt4_action_plans.json
craftext/dataset/scenarious/jax_build_square/: instructions.py  test.py
craftext/dataset/scenarious/jax_build_star/: test.py
craftext/dataset/scenarious/jax_conditional_achievements/: instructions.py  test.py
craftext/environment/: craftext_constants.py  craftext_wrapper.py
craftext/environment/encoders/: craftext_base_model_encoder.py  craftext_distilbert_model_encoder.py
craftext/environment/scenarious/: loader.py  manager.py
craftext/environment/states/: state.py  state_classic.py
(+10 files in other folders)
